<resources>
    <string name="app_name">Admin574</string>
    <string name="get_started">Get Started</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot Your Password ?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthdate">BirthDate</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="designation">Designation</string>
    <string name="company">Team Cyber Warriors</string>
    <string name="div">SYBCA - D5</string>
    <string name="i_agree_terms_and_condition">I agree terms and condition</string>
    <string name="name">Name</string>
</resources>