<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="0dp"
    tools:context=".Activities.SignUp">

    <TextView
        android:id="@+id/HeaderSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/Primary"
        android:textStyle="bold"
        android:textSize="32sp"
        android:gravity="center"
        android:layout_margin="8sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/HeaderSignUp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:boxStrokeColor="@color/Primary"
            android:hint="@string/first_name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/FirstName"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Primary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="3dp"
            app:boxStrokeColor="@color/Primary"
            android:hint="@string/last_name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LastName"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Primary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="3dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/Primary"
                android:hint="@string/birthdate">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Birthdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:textColor="@color/Primary"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/BirthdateImg"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginStart="13dp"
                app:tint="@color/Primary"
                android:src="@drawable/ic_calendar"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:boxStrokeColor="@color/Primary"
            android:hint="@string/email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Primary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:boxStrokeColor="@color/Primary"
            android:hint="@string/phone_no">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PhoneNo"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Primary"/>
        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/Primary"
                android:layout_marginTop="3dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/city"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/City"
                    android:inputType="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Primary"/>
            </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/Gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:layout_marginTop="3dp">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/Male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="42dp"
                app:buttonTint="@color/Primary"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/Female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                app:buttonTint="@color/Primary"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/Other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:layout_marginStart="42dp"
                android:layout_marginEnd="15dp"
                app:buttonTint="@color/Primary"/>

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/Primary"
            android:layout_marginTop="3dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/designation"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/Designation"
                android:inputType="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Primary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:gravity="center">
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/TermsCondition"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/Primary"
                android:textSize="16sp"
                android:text="@string/i_agree_terms_and_condition" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SignUp"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:cornerRadius="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/sign_up"
            android:textSize="22sp"
            android:textStyle="bold"/>
    </LinearLayout>
</RelativeLayout>