<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartUp.GetStarted">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:orientation="vertical"
        android:gravity="center_vertical|top"
        android:layout_margin="22dp"
        android:padding="12dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/ic_admin"
            android:layout_gravity="center"
            android:tint="@color/Primary"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="42sp"
            android:textColor="@color/Primary"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_margin="2dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="@drawable/bg_getstarted">


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="35sp"
            android:gravity="center"
            android:layout_margin="62dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SignIn"
            android:layout_width="320dp"
            android:layout_height="52dp"
            android:text="@string/sign_in"
            android:textSize="22sp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:layout_gravity="center"
            android:textColor="@color/Primary"
            app:cornerRadius="8dp"
            app:backgroundTint="@color/white"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/SignUp"
            android:layout_width="320dp"
            android:layout_height="52dp"
            android:text="@string/sign_up"
            android:textSize="22sp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:layout_gravity="center"
            android:textColor="@color/Primary"
            app:cornerRadius="8dp"
            app:backgroundTint="@color/white"
            />

    </LinearLayout>
</RelativeLayout>