<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="151dp"
            android:layout_margin="5dp"
            android:padding="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/EmpImg"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                android:src="@mipmap/null_user_round"
                app:civ_border_color="@color/Background"
                app:civ_border_width="2dp"
                app:civ_circle_background_color="@color/Background" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginStart="82dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/EmpName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="0dp"
                android:hint="@string/name"
                android:text=""
                android:textSize="17sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/EmpMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="0dp"
                android:hint="@string/email"
                android:text=""
                android:textSize="17sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/EmpPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="0dp"
                android:hint="@string/phone_no"
                android:text=""
                android:textSize="17sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/EmpDesignation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="12dp"
                android:hint="@string/designation"
                android:text=""
                android:textSize="17sp" />

        </LinearLayout>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/ViewUser"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/Primary"
                android:foreground="@drawable/ic_view"
                android:foregroundTint="@color/white"
                app:rippleColor="@color/Background"
                android:foregroundGravity="center"
                android:contentDescription="@string/todo"
                android:layout_marginStart="144dp"/>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>