<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/Primary"
    tools:context=".Activities.SignIn">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="370dp"
        android:layout_height="340dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="32dp"
        android:layout_gravity="center">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="32sp"
            android:textColor="@color/Primary"
            android:layout_margin="38dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="88dp">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_or_phone"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_gravity="center|top"
                app:boxStrokeColor="@color/Primary">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_gravity="center|top"
                android:layout_marginTop="5dp"
                app:boxStrokeColor="@color/Primary">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="52dp"
                app:cornerRadius="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/sign_in"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password"
                android:textSize="15sp"
                android:textColor="@color/Primary"
                android:gravity="center"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>